objects/Manual_User_Guide__kav.object
<CustomObject>
    <fields>
        <fullName>Additional_Product_Information__c</fullName>
        <label>Additional Product Information</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>StarCite Attendee Mgmt (Registration)</fullName>
                </value>
                <value>
                    <fullName>StarCite Spend Mgmt (Planning)</fullName>
                </value>
                <value>
                    <fullName>StarCite Business Intelligence Reporting</fullName>
                </value>
                <value>
                    <fullName>StarCite Small Meeting Solution</fullName>
                </value>
                <value>
                    <fullName>StarCite MarketView</fullName>
                </value>
                <value>
                    <fullName>StarCite Mobile NSO</fullName>
                </value>
                <value>
                    <fullName>StarCite MPoint/Private Label</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachment2__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment3__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LegacyId2__c</fullName>
        <label>Legacy Id 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source_ArticleId__c</fullName>
        <label>Legacy Source ArticleId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source_ArticleNo__c</fullName>
        <label>Legacy Source ArticleNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source_ID__c</fullName>
        <label>Legacy Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Created_Date__c</fullName>
        <formula>Original_Created_Date_ref__c</formula>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Created_Date_ref__c</fullName>
        <defaultValue>NOW ()</defaultValue>
        <description>Used to store the original creation date for the article.</description>
        <label>Original Created Date ref</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Family_for_Approval_Routing_Only__c</fullName>
        <description>Used for approval routing workflow only. Does not categorize article in the Knowledge base.</description>
        <inlineHelpText>Used for approval routing workflow only. Does not categorize article in the Knowledge base.</inlineHelpText>
        <label>Product Family for Approval Routing Only</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACM</fullName>
                </value>
                <value>
                    <fullName>ACR</fullName>
                </value>
                <value>
                    <fullName>ACTIVE Net</fullName>
                </value>
                <value>
                    <fullName>ActiveWorks-Camps</fullName>
                </value>
                <value>
                    <fullName>ActiveWorks-Endurance</fullName>
                </value>
                <value>
                    <fullName>ActiveWorks-Swim</fullName>
                </value>
                <value>
                    <fullName>Blue Bear</fullName>
                </value>
                <value>
                    <fullName>Class</fullName>
                </value>
                <value>
                    <fullName>Clubspaces</fullName>
                </value>
                <value>
                    <fullName>Connection Power</fullName>
                </value>
                <value>
                    <fullName>eteamz</fullName>
                </value>
                <value>
                    <fullName>Fairway</fullName>
                </value>
                <value>
                    <fullName>FellowshipOne</fullName>
                </value>
                <value>
                    <fullName>Gen</fullName>
                </value>
                <value>
                    <fullName>jencess</fullName>
                </value>
                <value>
                    <fullName>LeagueOne</fullName>
                </value>
                <value>
                    <fullName>LibOnline</fullName>
                </value>
                <value>
                    <fullName>OpenBook</fullName>
                </value>
                <value>
                    <fullName>Open Course</fullName>
                </value>
                <value>
                    <fullName>Payment Manager</fullName>
                </value>
                <value>
                    <fullName>Payment Server</fullName>
                </value>
                <value>
                    <fullName>RegCenter</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
                <value>
                    <fullName>RTP</fullName>
                </value>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>ServiceU</fullName>
                </value>
                <value>
                    <fullName>StarCite</fullName>
                </value>
                <value>
                    <fullName>StarCite Supplier</fullName>
                </value>
                <value>
                    <fullName>Thriva</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Information</fullName>
                </value>
                <value>
                    <fullName>Lanyon Group</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings-Attendee Management</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings-Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings-New Registration</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings-Simple Meetings</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings-Spend Management</fullName>
                </value>
                <value>
                    <fullName>Lanyon Mobile</fullName>
                </value>
                <value>
                    <fullName>Lanyon MPoint</fullName>
                </value>
                <value>
                    <fullName>Lanyon Venues</fullName>
                </value>
                <value>
                    <fullName>Lanyon Passkey</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transient-Channel Publisher</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transient-GDS Access</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transient-HODPublisher</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transient-Market Leads</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transient-Marketplace Intelligence</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transient-RFP Management</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel-Engagements &amp; Projects</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel-Hotel Directory</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel-Market Leads</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel-Marketplace Intelligence</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel-Reverse Auction</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel-Transient Sourcing</fullName>
                </value>
                <value>
                    <fullName>Rate Integrity-Rate Audit</fullName>
                </value>
                <value>
                    <fullName>Rate Integrity-Rate Availability</fullName>
                </value>
                <value>
                    <fullName>Rate Integrity-Reverse Audit</fullName>
                </value>
                <value>
                    <fullName>RegOnline by Lanyon</fullName>
                </value>
                <value>
                    <fullName>RegOnline Classic by Lanyon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Details__c</fullName>
        <label>Related</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <defaultValue>NOW () + 366</defaultValue>
        <description>If applicable, enter a review date for this article. Not required.</description>
        <inlineHelpText>If applicable, enter a review date for this article. Not required.</inlineHelpText>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <inlineHelpText>Copy Summary information into Topic field</inlineHelpText>
        <label>Topic</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <page>cs_UserGuidesView</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <page>cs_UserGuidesView</page>
            <template>Page</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Lanyon Article type</description>
    <label>User Guides (Lanyon)</label>
    <pluralLabel>User Guides(Lanyon)</pluralLabel>
</CustomObject>